[gd_scene load_steps=8 format=2]

[ext_resource path="res://MetaBoy/Layers.gd" type="Script" id=1]
[ext_resource path="res://MetaBoy/Loud-Crying.png" type="Texture" id=2]
[ext_resource path="res://MetaBoy/Superhero.png" type="Texture" id=3]
[ext_resource path="res://MetaBoy/spritesheets/Weapon/Yatagan.png" type="Texture" id=4]
[ext_resource path="res://MetaBoy/MetaBoyDisplay.gd" type="Script" id=5]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=6]

[sub_resource type="Animation" id=1]
resource_name = "run"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="MetaBoyDisplay" type="Control"]
margin_right = 100.0
margin_bottom = 128.0
rect_min_size = Vector2( 100, 128 )
theme = ExtResource( 6 )
script = ExtResource( 5 )

[node name="TempBg" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
color = Color( 0.0941176, 0.258824, 0.423529, 0.623529 )

[node name="MainBody" type="Node2D" parent="."]
position = Vector2( 50, 50 )
script = ExtResource( 1 )
frame = 10

[node name="Back" type="Sprite" parent="MainBody"]
texture = ExtResource( 3 )
hframes = 5
vframes = 3
frame = 10

[node name="Body" type="Sprite" parent="MainBody"]
texture = ExtResource( 3 )
hframes = 5
vframes = 3
frame = 10

[node name="Body2" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 10

[node name="Neck" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 10

[node name="Waist" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 10

[node name="Hat" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 10

[node name="Weapon" type="Sprite" parent="MainBody"]
texture = ExtResource( 4 )
hframes = 5
vframes = 3
frame = 10

[node name="Face" type="Sprite" parent="MainBody"]
texture = ExtResource( 2 )
hframes = 5
vframes = 3
frame = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/run = SubResource( 1 )

[node name="Name" type="Label" parent="."]
margin_top = 88.0
margin_right = 100.0
margin_bottom = 123.0
text = "MetaBoy
#296"
align = 1
autowrap = true

[node name="Button" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 128.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
